# slim-connector-back

./: .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go  pyproject.toml
.github/workflows/: cd.yml
cmd/tasq/: main.go
config/: config.go  config.yml  fetch_database.go
internal/: initializer.go
internal/handler/: routes.go  user_controller.go
internal/handler/OpenAI/: openai.go  openai_controller.go
internal/handler/task/: create_task.go  get_task.go  patch_task.go  task_analysis.go  task_controller.go
internal/handler/user/: create_user.go  get_user.go  patch_user.go  user_controller.go
internal/repository/: db.go
internal/routes/: routes.go  user_routes.go
internal/server/: tasq.go
model/: task.go  user.go
src/: .env
src/migrations/: env.py
src/slim_connector_back/: __init__.py  __main__.py  apis.py  env.py
src/slim_connector_back/service/: __init__.py
src/slim_connector_back/util/: __init__.py  __orderdirection.py  conc.py  err.py  keycloak.py
src/slim_connector_back/util/urls/: __http_request.py  __http_response.py
src/test/: __init__.py  base.py  cart_product_test.py  chat_test.py  conftest.py  product_test.py  sample_test.py  user_test.py
