[project]
name = "slim-connector-back"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kigawa", email = "kigawa.8390@gmail.com" }
]
dependencies = [
    "pymongo>=4.10.1",
    "uvicorn>=0.32.1",
    "fastapi>=0.115.5",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
virtual = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/slim_connector_back"]
